# toronto-fortran-games

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  chess.f  fireworks.c  meson.build  tictac.f
.github/workflows/: ci_cmake.yml  ci_meson.yml
archive/: .appveyor.yml
cmake/: compilers.cmake  test_tictac.cmake
tests/: test_tictac.sh
